# zeitop

./: .gitignore  Cargo.toml  README.md
clean-up/: Main.kt  build.sh  run.sh
examples/zeitop/pages/bdefault/: init.js.bak  page.html
examples/zeitop/pages/default/: init.js  page.html  script.js  style.scss
src/: client.rs  config.rs  device.rs  lib.rs  main.rs  server.rs  service.rs
src/default_services/: lib.rs  mod.rs  mpd.rs  obs.rs  page.rs  page_assets.rs  pulse.rs  sysinfo.rs
src/default_services/libs/: page.js
