[package]
name = "zeitop"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bytes = "1.10.0"
clap = "4.5.27"
futures = "0.3.31"
mpd = { version = "0.1.0", features = ["serde"] }
mpd_client = "1.4.1"
rusb = "0.9.4"
sass-rs = "0.2.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = { version = "0.33.1", features = ["serde", "windows"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
toml = "0.8.19"
tungstenite = "0.26.1"
usb-ids = "1.2025.1"
