[package]
name = "zeitop"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
bytes = "1.10.0"
clap = "4.5.27"
directories = "6.0.0"
futures = "0.3.31"
include_dir = "0.7.4"
mozdevice = "0.5.4"
mpd_client = "1.4.1"
nusb = "0.1.13"
obws = "0.14.0"
os_path = "0.8.0"
sass-rs = "0.2.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sysinfo = { version = "0.33.1", features = ["serde", "windows"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-tungstenite = "0.26.1"
toml = "0.8.19"
tungstenite = "0.26.1"
